--- a/AmigoDono.Web/Views/Shared/_Layout.cshtml
+++ b/AmigoDono.Web/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
         </nav>
     </header>
 
-    <div class="container body-content" style="top:50px">
+    <div class="container body-content">
         @RenderBody()
         <footer style="border-top: 1px solid black; clear: both; margin-top: 20px">
             <p style="text-align: center">&copy; @DateTime.Now.Year -  Owner's Friend</p>
