--- a/AmigoDono.Web/Views/Login/Signin.cshtml
+++ b/AmigoDono.Web/Views/Login/Signin.cshtml
@@ -1,4 +1,6 @@
-﻿@if (ViewBag.Mensagem == null)
+﻿@model AmigoDono.Model.Login
+
+@if (ViewBag.Mensagem == null)
 {
     ViewBag.Mensagem = "";
 }
@@ -32,21 +34,24 @@
 
 <body class="text-center">
 
-    @using (Html.BeginForm("RealizaLogin", "Login", FormMethod.Get, new { id = "delete-form", role = "form", @class = "form-signin" }))
+    @using (Html.BeginForm("RealizaLogin", "Login", FormMethod.Post, new { id = "login-form", role = "form", @class = "form-signin" }))
     {
-
+        @Html.AntiForgeryToken()
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <img class="mb-4" src="~/Content/imagens/Logo2.png" alt="Friend of The Owner" width="72" height="72">
         <h1 class="h3 mb-3 font-weight-normal">Por favor, registre-se</h1>
         <label for="inputEmail" class="sr-only">Email</label>
-        @Html.TextBox("Email", null, new { @class = "form-control", @placeholder = "Email", @required = "true", @autofocus = "true", @type = "email"})
+        @Html.TextBoxFor(model => model.Email, new { @class = "form-control", @placeholder = "Email", @required = "true", @autofocus = "true", @type = "email" })
+        @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
         <label for="inputPassword" class="sr-only">Senha</label>
-        @Html.TextBox("Senha", null, new { @class = "form-control", @placeholder = "Senha", @type ="password", @required = "true" })
+        @Html.TextBoxFor(model => model.Senha, new { @class = "form-control", @placeholder = "Senha", @type = "password", @required = "true" })
+        @Html.ValidationMessageFor(model => model.Senha, "", new { @class = "text-danger" })
         <div class="checkbox mb-3">
             <label>
                 <input type="checkbox" value="remember-me"> Lembrar Senha
             </label>
         </div>
-        <button class="btn btn-lg btn-primary btn-block" onclick="$('#delete-form').submit();">Entrar</button>
+        <button class="btn btn-lg btn-primary btn-block" onclick="$('#login-form').submit();">Entrar</button>
         <br />
         <p class="text-center">@Html.ActionLink("Não tem conta? Faça o seu cadastro", "Create", "AMIGO")</p>
 
