--- a/AmigoDono.Web/Views/AMIGO/Create.cshtml
+++ b/AmigoDono.Web/Views/AMIGO/Create.cshtml
@@ -11,7 +11,7 @@
     <script src="~/Scripts/jquery-3.3.1.min.js"></script>
 </head>
 <body class="bg-light">
-    @using (Html.BeginForm("Create", "AMIGO", FormMethod.Post, new { enctype = "multipart/form-data" }))
+    @using (Html.BeginForm("Create", "AMIGO", FormMethod.Post, new { enctype = "multipart/form-data", @id="foto"}))
     {
         @Html.AntiForgeryToken()
 
@@ -26,7 +26,7 @@
                         @Html.LabelFor(model => model.Imagem, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
                             <span class="btn btn-default btn-file">
-                                @Html.TextBoxFor(model => model.Imagem, new { @type = "file" })
+                                @Html.TextBoxFor(model => model.Imagem, new { @type = "file", @id= "foto"})
                             </span>
                         </div>
                         <div class="col-md-12 mb-3">
