--- a/AmigoDono.Web/Views/Home/Index.cshtml
+++ b/AmigoDono.Web/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<AmigoDono.Model.PET>
+﻿@model IEnumerable<AmigoDono.Model.vw_PET>
 
 @{
     ViewBag.Title = "Home";
@@ -7,115 +7,121 @@
 
 <h2 class="text-center" style="padding-top:50px">Amigos</h2>
 
-<table class="table table-bordered">
-    <tr>
-        <th class="text-center">
-            @Html.DisplayNameFor(model => model.Imagem)
-        </th>
-        <th class="text-center">
-            @Html.DisplayNameFor(model => model.NomePet)
-        </th>
-        <th class="text-center">
-            @Html.DisplayNameFor(model => model.TipoPet)
-        </th>
-        <th class="text-center">
-            @Html.DisplayNameFor(model => model.DataNascimento)
-        </th>
-        <th class="text-center">
-            @Html.DisplayNameFor(model => model.Situacao)
-        </th>
-        <th class="text-center">
-            @Html.DisplayNameFor(model => model.Idade)
-        </th>
-        <th class="text-center">
-            @Html.DisplayNameFor(model => model.RAÇA.NomeRaça)
-        </th>
-        <th class="text-center">
-            @Html.DisplayNameFor(model => model.Sexo)
-        </th>
-        <th class="text-center">
-            @Html.DisplayNameFor(model => model.Porte)
-        </th>
-        <th class="text-center">
-            @Html.DisplayNameFor(model => model.Castrado)
-        </th>
-        <th class="text-center">
-            @Html.DisplayName("Opções")
-        </th>
-        <th></th>
-    </tr>
+@using (Html.BeginForm("CapturarAmigo", "Home", FormMethod.Get, new { id = "cadastrar-form", role = "form", @class = "form-signin" }))
+{
+    <table class="table table-bordered">
+        <tr>
+            <th class="text-center">
+                @Html.DisplayNameFor(model => model.Imagem)
+            </th>
+            <th class="text-center">
+                @Html.DisplayNameFor(model => model.NomePet)
+            </th>
+            <th class="text-center">
+                @Html.DisplayNameFor(model => model.TipoPet)
+            </th>
+            <th class="text-center">
+                @Html.DisplayNameFor(model => model.DataNascimento)
+            </th>
+            <th class="text-center">
+                @Html.DisplayNameFor(model => model.Situacao)
+            </th>
+            <th class="text-center">
+                @Html.DisplayNameFor(model => model.Idade)
+            </th>
+            <th class="text-center">
+                @Html.DisplayNameFor(model => model.NomeRaça)
+            </th>
+            <th class="text-center">
+                @Html.DisplayNameFor(model => model.Sexo)
+            </th>
+            <th class="text-center">
+                @Html.DisplayNameFor(model => model.Porte)
+            </th>
+            <th class="text-center">
+                @Html.DisplayNameFor(model => model.Castrado)
+            </th>
+            <th class="text-center" hidden>
+                @Html.DisplayNameFor(model => model.OBS)
+            </th>
+            <th class="text-center">
+                @Html.DisplayName("Opções")
+            </th>
+            <th></th>
+        </tr>
 
-    @foreach (var item in Model)
-    {
-    <tr>
-        @if (item.Imagem != null)
+        @foreach (var item in Model)
         {
-            <td class="text-center">
-                @{
-                    var base64 = Convert.ToBase64String(item.Imagem);
-                    var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
-                }
-                <img src='@imgSrc' style="max-width:100px; max-height:100px;" />
-            </td>
-        }
-        <td class="text-center">
-            @Html.DisplayFor(modelItem => item.NomePet)
-        </td>
-        <td class="text-center">
-            @Html.DisplayFor(modelItem => item.TipoPet)
-        </td>
-        <td class="text-center">
-            @Html.DisplayFor(modelItem => item.DataNascimento)
-        </td>
-        <td class="text-center">
-            @Html.DisplayFor(modelItem => item.Situacao)
-        </td>
-        <td class="text-center">
-            @Html.DisplayFor(modelItem => item.Idade)
-        </td>
-        <td class="text-center">
-            @Html.DisplayFor(modelItem => item.IDRaça)
-        </td>
-        <td class="text-center">
-            @Html.DisplayFor(modelItem => item.Sexo)
-        </td>
-        <td class="text-center">
-            @Html.DisplayFor(modelItem => item.Porte)
-        </td>
-        <td class="text-center">
-            @Html.DisplayFor(modelItem => item.Castrado)
-        </td>
-        <td class="text-center" hidden>
-            @Html.DisplayFor(modelItem => item.OBS)
-        </td>
+            <tr>
+                @if (item.Imagem != null)
+                {
+                    <td class="text-center">
+                        @{
+                            var base64 = Convert.ToBase64String(item.Imagem);
+                            var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
+                        }
+                        <img src='@imgSrc' style="max-width:100px; max-height:100px;" />
+                    </td>
+                            }
+                <td class="text-center">
+                    @Html.DisplayFor(modelItem => item.NomePet)
+                </td>
+                <td class="text-center">
+                    @Html.DisplayFor(modelItem => item.TipoPet)
+                </td>
+                <td class="text-center">
+                    @Html.DisplayFor(modelItem => item.DataNascimento)
+                </td>
+                <td class="text-center">
+                    @Html.DisplayFor(modelItem => item.Situacao)
+                </td>
+                <td class="text-center">
+                    @Html.DisplayFor(modelItem => item.Idade)
+                </td>
+                <td class="text-center">
+                    @Html.DisplayFor(modelItem => item.NomeRaça)
+                </td>
+                <td class="text-center">
+                    @Html.DisplayFor(modelItem => item.Sexo)
+                </td>
+                <td class="text-center">
+                    @Html.DisplayFor(modelItem => item.Porte)
+                </td>
+                <td class="text-center">
+                    @Html.DisplayFor(modelItem => item.Castrado)
+                </td>
+                <td class="text-center" hidden>
+                    @Html.DisplayFor(modelItem => item.OBS)
+                </td>
 
-        <td class="text-center">
-            <button class="btn btn-success center-block" style="margin-bottom:0px">Capturar Amigo</button>
+                <td class="text-center">
+                    <button class="btn btn-success center-block" onclick="$('#cadastrar-form').submit()">Capturar Amigo</button>
 
-            <!--Configuração do Botão que vai Abrir o Modal, onde será definido os parametros do Modal com os dados que
-        irá aparecer no JQuery-->
+                    <!--Configuração do Botão que vai Abrir o Modal, onde será definido os parametros do Modal com os dados que
+                    irá aparecer no JQuery-->
 
-            <button class="btn btn-primary" id="BtnDetalhes"
-                    data-Imagem="@item.Imagem"
-                    data-NomePet="@item.NomePet"
-                    data-TipoPet="@item.TipoPet"
-                    data-Situacao="@item.Situacao"
-                    data-Idade="@item.Idade"
-                    data-NomeRaca="@item.IDRaça"
-                    data-Sexo="@item.Sexo"
-                    data-Porte="@item.Porte"
-                    data-Castrado="@item.Castrado"
-                    data-DataNascimento="@item.DataNascimento"
-                    data-OBS="@item.OBS"
-                    data-toggle="modal"
-                    data-target="#ModalDetalhes">
-                Detalhes
-            </button>
-        </td>
-    </tr>
-    }
+                    <button class="btn btn-primary BtnDetalhes"
+                            data-Imagem="@item.Imagem"
+                            data-NomePet="@item.NomePet"
+                            data-TipoPet="@item.TipoPet"
+                            data-Situacao="@item.Situacao"
+                            data-Idade="@item.Idade"
+                            data-NomeRaca="@item.NomeRaça"
+                            data-Sexo="@item.Sexo"
+                            data-Porte="@item.Porte"
+                            data-Castrado="@item.Castrado"
+                            data-DataNascimento="@item.DataNascimento"
+                            data-OBS="@item.OBS"
+                            data-toggle="modal"
+                            data-target="#ModalDetalhes">
+                        Detalhes
+                    </button>
+                </td>
+            </tr>
+         }
 
-</table>
+ </table>
+ }
 
 
 <!-- Código do Modal no Bootstrap -->
@@ -164,7 +170,7 @@
     <script>
         @*Recebe os Dados do Botão *@
         $(document).ready(function () {
-            $("#BtnDetalhes").click(function () {
+            $(".BtnDetalhes").click(function () {
                 $("#ModalDetalhes").modal('toggle');
                 $("#ModalDetalhes").modal('show');
                 var Imagem = $(this).attr("data-Imagem");
@@ -192,7 +198,7 @@
                 $("#CastradoModal").text(Castrado);
                 $("#DataNascimentoModal").text(DataNascimento).val($.format.date('dd M yy'));
                 $("#OBSModal").text(OBS);
-               
+
 
             })
         })
