--- a/AmigoDono.Web/Views/Shared/_Layout.cshtml
+++ b/AmigoDono.Web/Views/Shared/_Layout.cshtml
@@ -32,7 +32,15 @@
                 </ul>
           
                 <ul class="nav navbar-nav navbar-right btn-default" style="margin:0px; border-radius: 5px; margin-right: 5px">
-                    <li>@Html.ActionLink("Entrar", "Signin", "Login")</li>
+                    <li>@if (Session["Perfil"] == null)
+                    {
+                            @Html.ActionLink("Entrar", "Signin", "Login")
+                    }
+                    else
+                    {
+                        <p>@Html.Raw(ViewBag.Nome)</p>
+                    }
+                    </li>
                 </ul>
             </div>
         </nav>
@@ -41,8 +49,8 @@
     <div class="container body-content">
         @RenderBody()
         <footer style="border-top: 1px solid black; clear: both; margin-top: 20px">
-            @ViewBag.Nome
-            <p style="text-align: center">&copy; @DateTime.Now.Year -  Owner's Friend</p>
+         
+            <p style="text-align: center">&copy; @DateTime.Now.Year -    @ViewBag.Nome Owner's Friend</p>
         </footer>
     </div>
 
