--- a/AmigoDono.Web/Views/Shared/_Layout.cshtml
+++ b/AmigoDono.Web/Views/Shared/_Layout.cshtml
@@ -32,16 +32,15 @@
                 </ul>
           
                 <ul class="nav navbar-nav navbar-right btn-default" style="margin:0px; border-radius: 5px; margin-right: 5px">
-                    <li>
-                        @if (Session["Perfil"] == null)
-                        {
+                    <li>@if (Session["Perfil"] == null)
+                    {
                             @Html.ActionLink("Entrar", "Signin", "Login")
-                        }
-                        else
-                        {
-                            @Html.ActionLink("Sair", "Signout", "Login")
-                        }
-                   </li>
+                    }
+                    else
+                    {
+                        <p>@Html.Raw(ViewBag.Nome)</p>
+                    }
+                    </li>
                 </ul>
             </div>
         </nav>
@@ -50,7 +49,7 @@
     <div class="container body-content">
         @RenderBody()
         <footer style="border-top: 1px solid black; clear: both; margin-top: 20px">
-            
+            @ViewBag.Nome
             <p style="text-align: center">&copy; @DateTime.Now.Year -  Owner's Friend</p>
         </footer>
     </div>
