--- a/AmigoDono.Web/Views/Home/Index.cshtml
+++ b/AmigoDono.Web/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
-﻿@model IEnumerable<AmigoDono.Model.vw_PET>
+﻿@Model IEnumerable<AmigoDono.Model.vw_PET>
 
 @{
-    ViewBag.Title = "Home";
+    View.Title = "Home";
 }
 
 
