--- a/AmigoDono.Web/Views/Shared/_Layout.cshtml
+++ b/AmigoDono.Web/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                     }
                     else
                     {
-                        <p>@Html.Raw(ViewBag.Nome)</p>
+                        @Html.ActionLink("Sair", "Signout", "Login")
                     }
                     </li>
                 </ul>
@@ -49,7 +49,7 @@
     <div class="container body-content">
         @RenderBody()
         <footer style="border-top: 1px solid black; clear: both; margin-top: 20px">
-            @ViewBag.Nome
+                @ViewBag.Nome
             <p style="text-align: center">&copy; @DateTime.Now.Year -  Owner's Friend</p>
         </footer>
     </div>
